made buttons functional

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
             <div class="pager-reciever">
                 <h1>Pager</h1>
 
-                <div class="pager-reciever-text">222</div>
+                <div class="pager-reciever-text" id="pagerRecieverText"></div>
             </div>
 
             <div class="phone">
                 <h1>Phone</h1>
 
-                <div class="phone-text">222</div>
+                <div class="phone-text" id="phoneText"></div>
 
                 <div class="dial-buttons" id="dialButtons"></div>
 
-                <button class="reset-btn">Reset</button>
-                <button class="send-btn">Send</button>
+                <button class="reset-btn" id="resetBtn">Reset</button>
+                <button class="send-btn" id="sendBtn">Send</button>
             </div>
         </div>
         <script type="module" src="index.js"></script>
