fine tuning workflow

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
             </div>
         </div>
         <script type="module" src="index.js"></script>
+        <div class="info" id="info">
+        </div>
     </body>
 </html>
