--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <div class="communicators-container">
+        <div class="communicators-container communicators-container-mobile">
             <div class="pager-reciever">
                 <h1>Pager</h1>
 
